feat(music_service): 增加音乐推流

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -13,6 +13,7 @@
     "lib": ["esnext", "dom"],
     "skipLibCheck": true,
     "baseUrl": ".",
+    "rootDir": ".",
     "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": ["./src/*"]
