--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aacassandra/vue3-progressbar": "^1.0.3",
     "axios": "^0.27.2",
     "naive-ui": "^2.28.2",
+    "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
