--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "naive-ui": "^2.28.2",
     "pinia": "^2.0.14",
+    "vconsole": "^3.14.6",
     "vue": "^3.2.25",
     "vue-router": "4"
   },
